--- a/webrings.html
+++ b/webrings.html
@@ -14,9 +14,16 @@
     .btn-hover {
       transition: all 0.2s;
     }
-    .btn-hover:hover {
-      background: #e6e6e6;
-      color: #0c0c0c;
+    .btn-hover:hover,
+    .btn-hover:focus-visible {
+      background: rgba(255, 255, 255, 0.08);
+      color: #f5f5f5;
+      transform: translateY(-2px);
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.2);
+    }
+    .btn-hover:focus-visible {
+      outline: 2px solid #ffffff;
+      outline-offset: 4px;
     }
     input, button {
       color: #ffffff;
