fix: fixed browser links for each subring

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             window.location.replace(ring.sites[newIndex].website);
           } else {
             document.body.innerHTML = '';
-            window.location.replace('webrings.html#' + ring.ring);
+            window.location.replace('/' + ring.ring);
           }
           return;
         }
@@ -108,19 +108,19 @@
                 <p class="intro webring-intro">Select a program's webring to explore student websites!</p>
 
                 <div class="webrings">
-                    <a class="webring-card" href="webrings.html#cs">
+                    <a class="webring-card" href="/cs">
                         <span class="webring-logo webring-logo--model" aria-hidden="true" data-qmodel="logo" data-model="assets/model/cs_webring_logo.gltf" data-edge-angle="10"></span>
                         <span class="webring-name">CS WEBRING</span>
                     </a>
-                    <a class="webring-card" href="webrings.html#eng">
+                    <a class="webring-card" href="/eng">
                         <span class="webring-logo webring-logo--model" aria-hidden="true" data-qmodel="logo" data-model="assets/model/eng_webring_logo.gltf" data-edge-angle="10"></span>
                         <span class="webring-name">ENG WEBRING</span>
                     </a>
-                    <a class="webring-card" href="webrings.html#bcom">
+                    <a class="webring-card" href="/bcom">
                         <span class="webring-logo webring-logo--model" aria-hidden="true" data-qmodel="logo" data-model="assets/model/bcom_webring_logo.gltf" data-edge-angle="10"></span>
                         <span class="webring-name">BCOM WEBRING</span>
                     </a>
-                    <a class="webring-card" href="webrings.html#other">
+                    <a class="webring-card" href="/other">
                       <span class="webring-logo webring-logo--model" aria-hidden="true" data-qmodel="logo" data-model="assets/model/other_webring_logo.gltf" data-edge-angle="10"></span>
                       <span class="webring-name">OTHER FACULTY WEBRING</span>
                     </a>
